# printlab

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SETUP.md  pyproject.toml  requirements.txt  tools.toml
.github/workflows/: ci.yml
docs/: environment.md  fea.md  mcp.md  mcp_wishlist.md  openscad.md  printlab-wall-thickness-scalability.md
docs/schemas/: CadBuildReport.json  ExportReport.json  FEAMeshPreviewReport.json  FEAReport.json  GCodeReport.json  MaterialProfile.json  MeshRepairReport.json  MeshReport.json  MetricsDiffReport.json  OrientationSearchReport.json  PrintabilityReport.json  PrinterProfile.json  ProbeReport.json  ProcessProfile.json  RenderReport.json  RunManifest.json  SliceRequest.json  SliceResult.json
examples/benchy/: part.py  printlab.toml
examples/bracket/: part.py  printlab.toml
examples/bridge/: part.py  printlab.toml
examples/canoe/: part.py  printlab.toml
examples/hook/: part.py  printlab.toml
examples/openscad-plate/: part.scad  printlab.toml
examples/thinwall/: part.py  printlab.toml
printlab/: __init__.py  determinism.py  pipeline.py  provenance.py  toolchain.py
printlab/cad/: __init__.py  backend.py  base.py  freecad_bridge.py  openscad.py  probe.py
printlab/cli/: main.py
printlab/evaluation/: __init__.py  printability.py
printlab/fea/: __init__.py  _mesh_worker.py  deck.py  mesh.py  mesh_runner.py  solve.py
printlab/gcode/: __init__.py  metrics.py  (+1 more)
printlab_mcp/: __init__.py  server.py  tools.py
scripts/: generate_schemas.py  optimize_loop.py  setup-linux.sh  setup-macos.sh
tests/: conftest.py
(+90 files in other folders)
